--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ section {
 
 }
 
-.banner-head-btn {
+button {
     width: 150px;
     height: 30px;
     border: 1px solid;
@@ -61,13 +61,14 @@ section {
 
 }
 
-.banner-head-btn:hover {
+button:hover {
     background-color: #89029e;
-    color: #f0f0f0;
+    color: white;
 }
 
-.banner-head-btn:active {
+button:active {
     background-color: #6b007c;
+    color: white;
 
 }
 
@@ -75,6 +76,39 @@ section {
     margin-left: 20px;
     width: 600px;
 }
+
+
+/* debut des carte de musique*/
+.card {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-grow: 2;
+}
+
+.card-1, .card-2, .card-3, .card-4, .card-5 {
+    background-color: #fae2ff;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    flex-grow: 1.5;
+    text-align: center;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px 10px 0px 0px;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 
 
 
