--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ button:active {
     justify-content: flex-start;
     flex-wrap: wrap;
     flex-grow: 1;
+
 }
 
 .card-1, .card-2, .card-3, .card-4, .card-5 {
@@ -97,8 +98,17 @@ button:active {
 
 img {
     width: 100%;
-    height: auto;
+    height: 80%;
     border-radius: 10px 10px 0px 0px;
+}
+
+
+
+@media screen and (max-width: 800px) {
+    .card-1, .card-2, .card-3, .card-4, .card-5 {
+        width: 100%;
+        height: 50%;
+    }
 }
 
 
